--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250211.ipynb
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250211.ipynb
@@ -67,11 +67,18 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "# Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# preprocessing\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
     "\n",
     "\n",
     "# Machine learning algorithm\n",
@@ -82,8 +89,10 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.base import TransformerMixin, BaseEstimator\n",
     "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# Evaluation\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
@@ -91,9 +100,7 @@
     "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_absolute_percentage_error\n",
     "\n",
-    "# Visualization\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "\n",
     "\n",
     "# system utils\n",
     "import warnings\n",
@@ -130,11 +137,13 @@
    "source": [
     "# enkele extra code snippets gebruikt doorheen de oefening\n",
     "\n",
-    "\n",
     "# to plot or not to plot - zet op True om de plots te zien, zet op False om de plots niet te zien bij een Run ALL\n",
     "plot_graphs = True\n",
     "\n",
+    "\n",
+    "\n",
     "# schrijf een visual naar file\n",
+    "\n",
     "IMAGES_PATH = Path() / \"images\" \n",
     "IMAGES_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
@@ -181,6 +190,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code snippets om visuals op het scherm te plaatsen\n",
+    "Deze worden doorheen de notebook gebruikt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -209,6 +226,31 @@
     "        plt.tight_layout()\n",
     "        save_fig(filenaam)\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hulpfuncties\n",
+    "\n",
+    "bereken_percentage_outliers: via Isolation forest wordt het percentage van de outliers berekend.\n",
+    "- df : dataframe\n",
+    "- columns_to_use: list van koloms die gebruikt worden om de outliers te berekenen\n",
+    "- functie geeft een percentage terug van het aaantal outliers op het totaal aantal observaties\n",
+    "\n",
+    "\n",
+    "cap_values: vervang outliers door hun lower of upperpercentieel waarde: de whiskers worden berekend door van de lower_percentieel waarde een waarde af te trekken gelijk aan 1,5 * IQR (interquartile range), voor upper_percentieel waarde wordt de 1,5 * IQR bijgeteld\n",
+    "- df: dataframe\n",
+    "- columns_to_use\n",
+    "- lower_percentieel (default = 25)\n",
+    "- upper_percentieel (default = 75)\n",
+    "\n",
+    "\n",
+    "BinaryValueEncoder: hulp klasse om categorische te classificeren naar 0 en 1\n",
+    "- string_zero: indien categorische waarde = string_zero, krijgt de nieuwe waarde 0\n",
+    "- string_one: indien categorische waarde = string_zero, krijgt de nieuwe waarde 1\n",
+    "Try-out om zelf eens een class te schrijven voor transformation. Kan uiteraard ook via OneHotEncoding gedaan worden\n"
    ]
   },
   {
@@ -297,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +357,7 @@
     "\n",
     "insurance_data_filename = 'data/insurance.csv'\n",
     "df = pd.read_csv(insurance_data_filename)\n",
-    "log_info(f\"File {insurance_data_filename}\")\n",
+    "log_info(f\"File ingelezen: {insurance_data_filename}\")\n",
     "\n",
     "# check op duplicates, indien zo verwijder direct\n",
     "df.drop_duplicates(inplace=True)\n",
@@ -329,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -503,6 +545,7 @@
     "log_info(f\"df.describe : \\n{df.describe()}\")\n",
     "\n",
     "# geen nulwaarden \n",
+    "\n",
     "from summarytools import dfSummary\n",
     "dfSummary(df)"
    ]
@@ -731,17 +774,6 @@
    "source": [
     "# Feature preparation\n",
     "# standard scaler op de numerische waarden, min-max scaler\n",
-    "\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "\n",
-    "\n",
     "\n",
     "num_pipeline = Pipeline([\n",
     "    (\"impute\", SimpleImputer(strategy=\"median\")),\n",
