--- a/cases/FuelConsumption/FuelConsumption_CO.ipynb
+++ b/cases/FuelConsumption/FuelConsumption_CO.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "max    2000.0     8.000000   12.000000         30.200000    582.000000"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4    X              11.4           230  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,13 +341,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfdcbe3588754e0593575fbbf2e8f879",
+       "model_id": "530d499129b74f7b989c51bca97d78be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -362,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Report Report.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
+      "Report FuelCondumption.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
      ]
     }
    ],
@@ -380,7 +380,7 @@
     "report = sv.analyze(auto)\n",
     "\n",
     "# Output het rapport als een HTML-bestand, dit opent ook automatisch in je webbrowser\n",
-    "report.show_html('Report.html')"
+    "report.show_html('FuelCondumption.html')"
    ]
   },
   {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
        "[639 rows x 8 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
        "[634 rows x 8 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
