Nog wat afwerking

--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250215.ipynb
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250215.ipynb
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1274,8 +1274,7 @@
     }
    ],
    "source": [
-    "# eenvoudige regressie  zonder stratefy\n",
-    "\n",
+    "# eenvoudige regressie  zonder stratefy en zonder hyperparameter tuning\n",
     "X = df_original.drop(['charges'], axis=1)\n",
     "y = df_original['charges']\n",
     "\n",
@@ -1303,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1342,6 +1341,7 @@
     }
    ],
    "source": [
+    "#zonder hyper parameter tuning met stratify\n",
     "X = df_original.drop(['charges'], axis=1)\n",
     "y = df_original['charges']\n",
     "\n",
@@ -1355,6 +1355,7 @@
     "\n",
     "log_info(\"\\n\\n\")\n",
     "log_info(\"Regression models with polynomial features, met stratify\\n\")\n",
+    "log_info(\"*************************************************************\")\n",
     "log_info(\"Stratify on charges_cat: extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000,50000, np.inf\")\n",
     "log_info(\"Regression models polynomial features en stratify on charges_cat\\n\\n\")\n",
     "log_info(resultaat_string)"
@@ -1370,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1415,7 @@
     }
    ],
    "source": [
-    "#zonder stratify\n",
+    "#hyper parameter tuning zonder stratify\n",
     "X = df_original.drop(['charges'], axis=1)\n",
     "y = df_original['charges']\n",
     "\n",
@@ -1426,14 +1427,14 @@
     "update_best_scores(resultaat, model_naam)\n",
     "\n",
     "log_info(\"\\n\\n\")\n",
-    "log_info(\"Regression models with polynomial features en hyperparameter tuning, met stratify\\n\")\n",
-    "log_info(\"Regression models polynomial features en stratify on charges_cat\\n\\n\")\n",
+    "log_info(\"Regression models with polynomial features en hyperparameter tuning, zonder stratify\\n\")\n",
+    "log_info(\"*************************************************************\\n\\n\")\n",
     "log_info(resultaat_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1480,6 +1481,7 @@
     }
    ],
    "source": [
+    "#hyper parameter tuning met stratify\n",
     "X = df_original.drop(['charges'], axis=1)\n",
     "y = df_original['charges']\n",
     "\n",
@@ -1493,6 +1495,7 @@
     "\n",
     "log_info(\"\\n\\n\")\n",
     "log_info(\"Regression models with polynomial features en hyperparameter tuning, met stratify\\n\")\n",
+    "log_info(\"*****************************************************************************************\\n\\n\")\n",
     "log_info(\"Stratify on charges_cat: extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000,50000, np.inf\")\n",
     "log_info(\"Regression models polynomial features en stratify on charges_cat en met hyperparameter tuning\\n\\n\")\n",
     "log_info(resultaat_string)\n"
@@ -1507,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1554,6 +1557,8 @@
     }
    ],
    "source": [
+    "#hyper parameter tuning met stratefy en zonder outliers in BMI\n",
+    "\n",
     "X = df_original.drop(['charges'], axis=1)\n",
     "y = df_original['charges']\n",
     "\n",
@@ -1567,6 +1572,8 @@
     "update_best_scores(resultaat, model_naam)\n",
     "\n",
     "log_info(\"\\n\\n\")\n",
+    "log_info(\"Regression models with polynomial features en hyperparameter tuning, met stratify\\n\")\n",
+    "log_info(\"*****************************************************************************************\\n\\n\")\n",
     "log_info(\"Zonder outliers in BMI - Regression models with polynomial features, met stratefy\\n\")\n",
     "log_info(\"Stratify on charges_cat: extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000, np.inf\")\n",
     "log_info(\"Regression models polynomial features en stratify on charges_cat\\n\\n\")\n",
@@ -1582,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1621,7 @@
     }
    ],
    "source": [
-    "# test om alle rokers te verwijderen en terug een check te doen\n",
+    "#met hyper parameter tuning en met stratify maar enkel de niet-rokers\n",
     "\n",
     "df_no_smokers = df_original[df_original['smoker'] == 'no']\n",
     "\n",
@@ -1630,6 +1637,8 @@
     "alle_results[model_naam] = resultaat\n",
     "\n",
     "log_info(\"\\n\\n\")\n",
+    "log_info(\"Regression models with polynomial features en hyperparameter tuning, met stratify\\n\")\n",
+    "log_info(\"*****************************************************************************************\\n\\n\")\n",
     "log_info(\"nExtra test: alle rokers verwijderd\\n\")\n",
     "log_info(\"Regression models with polynomial features, met stratefy\")\n",
     "log_info(\"Stratify on charges_cat: extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000, 50000, np.inf\")\n",
@@ -1639,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1680,7 @@
     }
    ],
    "source": [
-    "# test om enkel rokers te behouden en terug een check te doen\n",
+    "#met hyper parameter tuning en met stratify maar enkel rokers\n",
     "\n",
     "df_smokers = df_original[df_original['smoker'] == 'yes']\n",
     "\n",
@@ -1687,8 +1696,10 @@
     "alle_results[model_naam] = resultaat\n",
     "\n",
     "log_info(\"\\n\\n\")\n",
+    "log_info(\"Regression models with polynomial features en hyperparameter tuning, met stratify\\n\")\n",
+    "log_info(\"*****************************************************************************************\\n\\n\")\n",
     "log_info(\"Extra test: alle niet-rokers verwijderd\\n\")\n",
-    "log_info(\"Regression models with polynomial features, met stratefy\")\n",
+    "log_info(\"Regression models with polynomial features, met stratify\")\n",
     "log_info(\"Stratify on charges_cat: extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000, 50000, np.inf\")\n",
     "log_info(\"Regression models polynomial features en stratify on charges_cat\\n\\n\")\n",
     "log_info(resultaat_string)\n",
@@ -1697,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1754,7 @@
     }
    ],
    "source": [
-    "# test om enkel de rokers te testen op BMI en charges\n",
+    "#met hyper parameter tuning en met stratify maar enkel rokers en enkel BMI als feature\n",
     "\n",
     "preprocessor_simple = ColumnTransformer([],\n",
     "     remainder='passthrough')\n",
@@ -1761,9 +1772,11 @@
     "alle_results[model_naam] = resultaat\n",
     "\n",
     "log_info(\"\\n\\n\")\n",
-    "log_info(\"Extra test: enkel BMI-test\\n\")\n",
-    "log_info(\"Regression models with polynomial features, met stratefy\")\n",
-    "log_info(\"Stratify on charges_cat: extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000, np.inf\")\n",
+    "log_info(\"Regression models with polynomial features en hyperparameter tuning, met stratify\\n\")\n",
+    "log_info(\"*****************************************************************************************\\n\\n\")\n",
+    "log_info(\"Extra test: enkel BMI als feature\\n\")\n",
+    "log_info(\"Regression models with polynomial features, met stratify\")\n",
+    "log_info(\"Stratify on charges_cat: extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000, 50000, np.inf\")\n",
     "log_info(\"Regression models polynomial features en stratify on charges_cat\\n\\n\")\n",
     "log_info(resultaat_string)\n",
     "\n",
