Almost final version

--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/Geert_MedicalCostPrediction.ipynb
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/Geert_MedicalCostPrediction.ipynb
@@ -59,6 +59,7 @@
     "Bij run ALL: \n",
     "- output in LinReg_continue.log\n",
     "- overzicht van alle resultaten in alle_results.txt\n",
+    "- de plots worden bewaard in de images\\\n",
     "\n",
     "\n",
     "\n"
