--- a/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/Geert_HeartAttackRiskPrediction.ipynb
+++ b/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/Geert_HeartAttackRiskPrediction.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,9 +304,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'log_info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m heart_attack_risk_dataset_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/heart_attack_risk_dataset.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(heart_attack_risk_dataset_filename)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mlog_info\u001b[49m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile ingelezen: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mheart_attack_risk_dataset_filename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m df_raw \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mcopy() \u001b[38;5;66;03m# hou het ruwe dataframe bij\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# lijst met features opgedeeld in numerisch en categorisch\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'log_info' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# data inlezen van de file\n",
     "heart_attack_risk_dataset_filename = 'data/heart_attack_risk_dataset.csv'\n",
@@ -623,6 +635,7 @@
     "# met stratefy op de target value\n",
     "# en zonder\n",
     "\n",
+    "log_info(\"\\n\\n\")\n",
     "log_info(f\"Eenvoudige logistic regression met stratify op de target value zonder SMOTE\")\n",
     "log_info(\"**************************************************************\")\n",
     "\n",
@@ -698,6 +711,7 @@
     "# met stratefy op de target value\n",
     "# en nu eens met de parameter class_weight='balanced' voor de logistic regression\n",
     "\n",
+    "log_info(\"\\n\\n\")\n",
     "log_info(f\"Eenvoudige logistic regression met stratify op de target value en class weight = balanced\")\n",
     "log_info(\"******************************************************************************************\")\n",
     "\n",
@@ -770,7 +784,12 @@
     "Eenvoudige logistic regression met pipeline opzet en met SMOTE\n",
     "Om te checken of SMOTE bijdraagt tot een beter resultaat\n",
     "\n",
-    "Maar dat is niet. Voor de vervolg regressie passen we geen SMOTE meer toe"
+    "Het resultaat is anders. Zonder SMOTE of class_weight=balanced, hebben in de predicted waarde enkel predictie op LOW.\n",
+    "Bij SMOTE en bij class_weight=balanced hebben we predictie op LOW, MODERATE en HIGH\n",
+    "\n",
+    "Voor de vervolg regressie passen we geen SMOTE meer toe\n",
+    "\n",
+    "Dit kan in een vervolgopdracht nog verder onderzocht worden"
    ]
   },
   {
@@ -782,6 +801,7 @@
     "# Eenvoudige Logistic regression met pipeline opzet en met SMOTE\n",
     "# met stratefy op de target value\n",
     "\n",
+    "log_info(\"\\n\\n\")\n",
     "log_info(f\"Eenvoudige logistic regression met SMOTE en met stratify op de target value\")\n",
     "log_info(\"********************************************************************\")\n",
     "\n",
@@ -879,11 +899,11 @@
     "lgr = LogisticRegression(class_weight='balanced')\n",
     "\n",
     "models_cl = [rfc, abc, gbc, etc, lgr, svc]\n",
-    "models_cl = [lgr, svc, abc]\n",
+    "# models_cl = [lgr, svc, abc]\n",
     "\n",
     "names_cl = [\"Random Forest\", \"Ada Boost\", \"Gradient Boosting\", \"Extra Trees\",\n",
     "        \"Logistic Regression\", \"Support Vector Machine\"]\n",
-    "names_cl = [\"Logistic Regression\", \"Support Vector Machine\",\"Gradient Boosting\"]\n",
+    "# names_cl = [\"Logistic Regression\", \"Support Vector Machine\",\"Gradient Boosting\"]\n",
     "\n",
     "def training_classification(X_train, X_test, y_train, y_test, preprocessor):    \n",
     "    scores, scores_dict, reports, cms = [], dict(), dict(), dict()\n",
@@ -899,14 +919,14 @@
     "        scores_dict[j] = [acc_score]    \n",
     "        reports[j] = classification_report(y_test, y_pred)\n",
     "        cms[j] = confusion_matrix(y_test, y_pred)\n",
-    "        log_info(f\"\\n\\nModel : {j}\")\n",
-    "        log_info(\"\\n\")\n",
-    "        log_info(f\"Accuracy scores: {acc_score}\")\n",
-    "        log_info(f\"Confusion matrix: {cms[j]}\") \n",
-    "        log_info(f\"Classification report: {reports[j]}\") \n",
+    "        log_info(f\"\\n\\nExecuting classification for Model : {j}\")\n",
+    "        #log_info(\"\\n\")\n",
+    "        #log_info(f\"Accuracy scores: {acc_score}\")\n",
+    "        #log_info(f\"Confusion matrix: {cms[j]}\") \n",
+    "        #log_info(f\"Classification report: {reports[j]}\") \n",
     "        disp = ConfusionMatrixDisplay(confusion_matrix=cm,\n",
     "                              display_labels=pipeline.classes_)\n",
-    "        disp.plot()\n",
+    "        # disp.plot()\n",
     "        fig_titel = f\"ConfusionMatrixDisplay voor model {i}\"\n",
     "        save_fig(fig_titel)\n",
     "\n",
@@ -915,7 +935,7 @@
     "    df_results = df_results.sort_values(\"score\", ascending=False)\n",
     "\n",
     "    index = 0\n",
-    "    for row in range(1):\n",
+    "    for row in range(2):\n",
     "        fig, axes = plt.subplots(ncols=3, figsize=(15, 6))        \n",
     "        for i in range(3):\n",
     "            sns.heatmap(cms[df_results.index[index]], annot=True, fmt='d', ax=axes[i])\n",
@@ -931,7 +951,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_raw' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdf_raw\u001b[49m\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Separate features (X) and target variable (y)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m X \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdrop(columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHeart_Attack_Risk\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_raw' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df = df_raw.copy()\n",
     "\n",
@@ -945,10 +977,16 @@
     "scores_dict, reports_dict, cms_dict = training_classification(X_train, X_test, y_train, y_test, preprocessor)\n",
     "\n",
     "#results_string = tabulate(results, headers='keys', tablefmt='psql')\n",
+    "\n",
+    "log_info(\"\\n\")\n",
+    "log_info(f\"Resultaten voor model zonder hyperparameter tuning\")\n",
+    "log_info(\"**********************************************\")\n",
+    "log_info(f\"voor models : {scores_dict.keys()}\\n\")\n",
+    "\n",
     "for models in scores_dict.keys():\n",
     "    log_info(\"\\n\")\n",
     "    log_info(f\"Resultaten voor model {models}\")\n",
-    "    log_info(\"**********************************************\\n\")\n",
+    "    log_info(\"**********************************************\")\n",
     "    log_info(f\"Score: {scores_dict[models]}\")\n",
     "    log_info(f\"Classification report: {reports_dict[models]}\")\n",
     "    log_info(f\"Confusion matrix: {cms_dict[models]}\")\n",
@@ -978,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
