--- a/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/Geert_HeartAttackRiskPrediction.ipynb
+++ b/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/Geert_HeartAttackRiskPrediction.ipynb
@@ -12,7 +12,7 @@
     "- Supervised Learning toepassen\n",
     "- EDA uitvoeren op een dataset\n",
     "- Logistic Regression toepassen op de data voor classificatie\n",
-    "- andere vormen van classificatie toepassen\n",
+    "- andere vormen van classificatie toepassen zonder en met hyper parameter tuning\n",
     "\n",
     "Dataset: \n",
     "- More info: see kaggle https://www.kaggle.com/datasets/arifmia/heart-attack-risk-dataset\n",
@@ -28,12 +28,12 @@
     "- feature engineering\n",
     "- select features for modelling\n",
     "- eenvoudige logistic regression\n",
-    "- eenvoudige logistic regression en unbalance van de features corrigeren met SMOTE- \n",
-    "- modeling met Logistic Regression, Decision Tree Regression en Random Forrest Regression\n",
-    "- modeling met Hyperparameter tuning met GridSearchCV voor één model\n",
+    "- eenvoudige logistic regression en unbalance van de features corrigeren met SMOTE- en class_weight = 'unbalanced\n",
+    "- functie voor modeling met Logistic Regression, Decision Tree Regression en Random Forrest Regression, met uitvoering\n",
+    "- functie modeling met Hyperparameter tuning met GridSearchCV voor drie modellen, met uitvoering\n",
     "\n",
     "\n",
-    "Bij run ALL: \n",
+    "Bij run ALL: (duurt 20 min)\n",
     "- output in LogReg_continue.log\n",
     "- de plots worden bewaard in de images\\\n",
     "\n",
@@ -41,7 +41,7 @@
     "Aantal testen werdern uitgevoerd, met en zonder SMOTE, met en zonder HyperParameter tuning maar de resultaten veranderen niet zo veel\n",
     "Ook logistic regression met class_weight='balanced' maar op zich weinig verschil in de resultaten\n",
     "\n",
-    "De functie zijn geschreven. We kunnen nadien nog extra testen doen met bepaalde features wel of niet mee te nemen\n",
+    "De functies zijn geschreven. We kunnen nadien nog extra testen doen met bepaalde features wel of niet mee te nemen\n",
     "\n"
    ]
   },
@@ -1001,7 +1001,7 @@
     "    # Hyperparameters sets voor verschillende modellen\n",
     "\n",
     "    models = {\n",
-    "        'Logistic Regression': LogisticRegression(),\n",
+    "        'Logistic Regression': LogisticRegression(class_weight='balanced'),\n",
     "        'Decision Tree': DecisionTreeClassifier(random_state=42),\n",
     "        'Gradient Boosting': GradientBoostingClassifier(random_state=42)\n",
     "    }\n",
@@ -1104,7 +1104,7 @@
     "    for k, item in items.items():\n",
     "        log_info(f\"Parameter: {k}\")     \n",
     "        log_info(f\"{item}\")    \n",
-    "    log_info(\"\\n\\n\")\n",
+    "    log_info(\"\\n\")\n",
     "\n",
     "\n",
     "# haal uit de resultsdict alle waarden van de accuracy en plot deze per model\n",
