--- a/cases/Linear_Price_dataset/LinReg_Mohamad.ipynb
+++ b/cases/Linear_Price_dataset/LinReg_Mohamad.ipynb
@@ -23,7 +23,7 @@
     "Business Goal\n",
     "We are required to model the price of cars with the available independent variables. It will be used by the management to understand how exactly the prices vary with the independent variables. They can accordingly manipulate the design of the cars, the business strategy etc. to meet certain price levels. Further, the model will be a good way for management to understand the pricing dynamics of a new market.\n",
     "\n",
-    "# Gaol:\n",
+    "# Goal:\n",
     "\n",
     "To build a model doing better than **.91** Score which is done by OnurCaan "
    ]
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset saved in: C:\\Users\\Cursist\\Desktop\\Linear_Price_dataset\\data\n"
+      "Dataset saved in: C:\\Users\\Cursist\\Desktop\\python\\My cases\\data_science_cases\\cases\\Linear_Price_dataset\\data\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "683aba56-c832-4c4a-a001-dd1856d8151b",
+       "ref": "fd2be040-5aef-470e-8201-e9b5dbeabe49",
        "rows": [
         [
          "0",
@@ -2235,7 +2235,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a6ef5ce4-a31c-48af-a437-4f9f2fb1e234",
+       "ref": "5333ba9f-b643-4dd0-8466-763c0832bba4",
        "rows": [
         [
          "count",
@@ -2942,22 +2942,6 @@
    "source": [
     "# Outliers Removing\n",
     "I used isolationForest to remove outliers from the dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import IsolationForest\n",
-    "\n",
-    "\n",
-    "iso_forest = IsolationForest(contamination=0.01)\n",
-    "outliers = iso_forest.fit_predict(df[['price', 'horsepower', 'enginesize', 'wheelbase', 'citympg']])\n",
-    "\n",
-    "\n",
-    "data_cleaned = df[outliers == 1]\n"
    ]
   },
   {
